# Crypto-Trading

./: BacktestStrategy.py  BacktestStrategyTest.ipynb  BacktestStrategyTest1.ipynb  BacktestStrategyTest2.ipynb  BuildLinearData.py  BuildLinearDataTest.ipynb  BuildLinearModel.py  BuildLinearModelTest.ipynb  BuildTardisData.py  KlineData.py  LinearDataTest.ipynb  OptimisationTest.ipynb  OptimisationTestTardis.ipynb  OrderBook.py  README.md
ByBit/: ByBit_GLFT.py  ByBit_TP.py  Bybit_Constants.py  Bybit_GLFT_Helper.py
ByBit/ByBit_Helper/: Cargo.toml
ByBit/usage_examples/: Cargo.toml
ByBit/usage_examples/src/: sample_main_ob.rs  sample_main_trades.rs  sample_main_vol.rs
Live/: Fill_trail_v1.py  Fill_trail_v2.py  Fill_trail_v3.py  Fill_trail_v4.py  Live_Data.py  Live_Data_v1.py  Live_Data_v2.py  Live_Test.py  live_bot_v1.py  reverse.py  test_bot_v1.py  test_bot_v2.py
Market Making/GLFT/: Okx_GLFT_Bot.py  Okx_GLFT_Helper.py  Okx_GLFT_model.py  Okx_Live_Trades.py  Readme.md
Market Making/Grid Strategy/: Readme.md  (+6 more)
Market Making/Strategy 1/Rust Bots/try_bot_v3/: Cargo.toml
Market Making/Strategy 1/Rust Bots/try_bot_v3/src/: hyperparameters.rs  main.rs  model.rs  placeorder.rs  scrap.rs  signal.rs  ticks.rs
Tardis Data/: BacktestStrategy.py  BacktestStrategyReinvest.py  BacktestStrategy_Imp.py  BacktestStrategy_Rev_BUSD.py  Backtest_NO_TC.ipynb  Backtest_NO_TC_Improved.ipynb  Backtest_NO_TC_R.ipynb  Backtest_NO_TC_Reverse.ipynb  Backtest_NO_TC_Reverse_BUSD.ipynb  BuildLinearModel.py  BuildTardisData.ipynb  BuildTardisData.py  Stream_test.ipynb  Untitled10.ipynb
(+39 files in other folders)
