[package]
name = "usage_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
url = "2.2.2"
futures-util = "0.3.17"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "*"
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
ndarray = "0.15.6"
crossbeam = "0.8.2"
circular-buffer = "0.1.7"
Bybit_Helper = { path = "/home/gustakh/RustProjects/Bybit_Helper" }