[package]
name = "try_bot_v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
url = "2.2.2"
futures-util = "0.3.17"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "*"
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
ndarray = "0.15.6"
fxhash = "0.2.1"
crossbeam-channel = "0.5"
ureq = "2.8.0"
chrono = "0.4.31"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"